<resources>
    <string name="app_name">CycleHub</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reset">Reset</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_verify_your_email_and_login">Please verify your email and continue</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="Heading">Heading</string>
    <string name="description">Description</string>
    <string name="sign_out">Sign out</string>
    <string name="change_password">Change Password</string>
    <string name="name">name</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="url">url</string>
    <string name="contact_seller">Contact Seller</string>
</resources>